# cargo-test-changed

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: error.rs  format.rs  git.rs  main.rs  metadata.rs
src/metadata/: mod.rs  tests.rs
src/reporting/: console.rs  json.rs  mod.rs
src/test_runner/: cargo.rs  mod.rs  nextest.rs
src/testing/: executor.rs  mod.rs  plan.rs  result.rs
src/vcs/: git.rs  git_tests.rs  mod.rs  test_utils.rs
