[package]
description = "A cargo subcommand to run tests for changed crates and their dependents."
name = "cargo-test-changed"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Felix Packard <fjpackard@gmail.com>"]
repository = "https://github.com/felixpackard/cargo-test-changed"
keywords = ["cargo", "subcommand", "test", "git"]
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "development-tools::testing",
]

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.19"
clap = { version = "4.5.34", features = ["derive"] }
clap-cargo = "0.15.2"
colored = "3.0.0"
gix = { version = "0.70", features = ["status"] }
indexmap = "2.8.0"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "cargo-test-changed"
path = "src/main.rs"
