[package]
description = "A Cargo subcommand to run tests for changed crates and their dependents. "
name = "cargo-test-changed"
version = "0.1.2"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
authors = ["Felix Packard <fjpackard@gmail.com>"]
repository = "https://github.com/felixpackard/cargo-test-changed"
keywords = ["cargo", "subcommand", "testing", "git"]
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "development-tools::testing",
]

[dependencies]
anyhow = "1.0"
cargo_metadata = { version = "0.19", features = ["builder"] }
clap = { version = "4.5.34", features = ["derive"] }
clap-cargo = "0.15.2"
colored = "3.0.0"
gix = { version = "0.73", features = ["status"] }
indexmap = { version = "2.8.0", features = ["serde"] }
pathdiff = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
tempfile = "3.19.1"

[[bin]]
name = "cargo-test-changed"
path = "src/main.rs"

[features]
default = []
dev = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
